# dndsim

./: Makefile  pyproject.toml  pyrightconfig.json  readme.md
dndsim/: __init__.py  behaviours.py  district.py  faction.py  quarter.py  resources.py  scheduler.py
docs/source/: conf.py  design.rst  index.rst
notebooks/: Exploration.ipynb
tests/: test_basic.py  test_simulations.py
