[tool.poetry]
name = "dndsim"
version = "2020.9.0"
description = "Simulating the conflicts between factions in a D&D game."
authors = ["Hristo Filaretov <h.filaretov@campus.tu-berlin.de>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
mesa = "^0.8.7"
matplotlib = "^3.3.2"
ipykernel = "^5.3.4"

[tool.poetry.dev-dependencies]
pytest = "^6.0.2"
black = {version = "^20.8b1", allow-prereleases = true}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
