[tool.poetry]
name = "dndsim"
version = "2020.9.1"
description = "Simulating the conflicts between factions in a D&D game."
authors = ["Hristo Filaretov <h.filaretov@campus.tu-berlin.de>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
matplotlib = "^3.3.2"
ipykernel = "^5.3.4"
loguru = "^0.5.3"

[tool.poetry.dev-dependencies]
pytest = "^6.0.2"
black = {version = "^20.8b1", allow-prereleases = true}
pytest-cov = "^2.10.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
